# macro-regime-model

./: .gitignore  HANDOFF.md  pyproject.toml
docs/: paper.md
docs/literature/: methodology_search_2026-04-17.md
lib/: data_loader.py  paths.py  tuning.py  universe.py
scripts/: black_litterman.py  daily_dashboard.py  data_pipeline.py  kalman_betas.py  literature_search.py  param_tuner.py  prediction_scorecard.py  regime_analysis.py  regime_switching.py  stochastic_programming.py  strategy_backtest.py  timesfm_views.py  wasserstein_regime.py
tests/: test_lib.py
