[project]
name = "macro-regime-model"
version = "0.1.0"
description = "Macro regime attribution and allocation research"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "yfinance>=0.2",
    "fredapi>=0.5",
    "statsmodels>=0.14",
    "numba>=0.59",
    "scikit-learn>=1.4",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = ["pytest"]
